# voxctl

./: .gitignore  LICENSE  LICENSE.md  go.mod  go.sum  readme.md
.backup/: main.go  model.go.old2
.backup/model/: model.go  model_impl.go  view.go
.backup/server/: main.go
.backup/types/: state.go
.notes/: ollama-curl
api/: chat_handler.go  scribe_handler.go  speak_handler.go
azure/: azure.go
backup/: main.go  model.go.old2
backup/model/: model.go
client/: go.mod
client/internal/server/: server.go  server_impl.go
client/voxctl/: main.go
cmd/: main.go  main.go.old  voxctl.go
cmd/voxctl/: main.go
internal/audio/: audio.go  mpris.go
internal/audio/audioplayer/: audioplayer.go
internal/audio/player/: player.go
internal/audio/vosk/: vosk.go
internal/config/: config.go  flags.go
internal/features/scribe/: scribe.go
internal/features/speak/: speak.go
internal/flags/: flags.go
internal/handler/: handler.go
internal/handlers/: chat_handler.go  ollama_handler.go  read_handler.go  scribe_handler.go  speak_handler.go
internal/input/: input.go
internal/log/: log.go
internal/model/: model.go  model_impl.go  view.go
internal/models/: models.go
internal/request/: request.go
internal/server/: server.go
internal/speech/: speech.go
internal/state/: state.go
internal/types/: flags.go  response.go  state.go  status.go  types.go
internal/ui/model/: model.go  (+3 more)
internal/vosk/: vosk.go
server/: Cargo.toml
server/src/: _utils.rs  lib.rs  main.rs
server/src/_utils/: azure.rs  counter.rs  endpoints.rs  log.rs  ollama.rs  speech.rs
(+14 files in other folders)
