[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
actix-web = "4.5.1"
env_logger = "0.11.2"
tokio = { version = "1.36.0", features = ["full"] }
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio-stream = "0.1.14"
