[package]
name = "server"
version = "0.1.0"
edition = "2018"

[dependencies]
env_logger = "0.11.3"
log = "0.4.17"
actix-web = "4.5.1"
tokio = { version = "1.36.0", features = ["full"] }
crossterm = "0.27.0"
dotenv = "0.15.0"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio-stream = "0.1.14"
chrono = "0.4.38"
